@@ -643,6 +643,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon BJC i320 */ /* does not conform to any current model, commands not known yet */
+    "i320", 3,
+    842, 17*72,
+    11, 9, 10, 18,
+    &canon_MULTIPASS_MP170_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px,0,control_cmd_PIXMA_iP2700,
+    &canon_BJC_i320_modelist,
+    &canon_BJC_i320_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
 
 
   /*************/
